g4Files/.antlr/LabeledExprParser.java
// Generated from d:\Materias\Compiladores\antlr4\g4Files\LabeledExpr.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LabeledExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, ELSE=2, WHILE=3, FOR=4, PRINT=5, PRINTSTR=6, OPREL=7, MUL=8, DIV=9, 
		ADD=10, SUB=11, EQ=12, ABCHAV=13, FECHAV=14, APARE=15, FPARE=16, VIG=17, 
		PTVIG=18, TYPES=19, CONST=20, ID=21, INT=22, FLOAT=23, STRING=24, COMMENT=25, 
		NEWLINE=26, WS=27;
	public static final int
		RULE_prog = 0, RULE_stat = 1, RULE_declaration = 2, RULE_declarationSimple = 3, 
		RULE_declarationConst = 4, RULE_conditional = 5, RULE_conditionalExecExpr = 6, 
		RULE_whileloop = 7, RULE_forloop = 8, RULE_asignNumberExpr = 9, RULE_asignStringExpr = 10, 
		RULE_expr = 11, RULE_stringexpr = 12, RULE_concatStringexpr = 13, RULE_sumStringExpr = 14, 
		RULE_comparisson = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "stat", "declaration", "declarationSimple", "declarationConst", 
			"conditional", "conditionalExecExpr", "whileloop", "forloop", "asignNumberExpr", 
			"asignStringExpr", "expr", "stringexpr", "concatStringexpr", "sumStringExpr", 
			"comparisson"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'if'", "'else'", "'while'", "'for'", "'println'", "'printlnstr'", 
			null, "'*'", "'/'", "'+'", "'-'", "'='", "'{'", "'}'", "'('", "')'", 
			"','", "';'", null, "'const'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IF", "ELSE", "WHILE", "FOR", "PRINT", "PRINTSTR", "OPREL", "MUL", 
			"DIV", "ADD", "SUB", "EQ", "ABCHAV", "FECHAV", "APARE", "FPARE", "VIG", 
			"PTVIG", "TYPES", "CONST", "ID", "INT", "FLOAT", "STRING", "COMMENT", 
			"NEWLINE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LabeledExpr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LabeledExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(32);
				stat();
				}
				}
				setState(35); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << PRINT) | (1L << PRINTSTR) | (1L << APARE) | (1L << TYPES) | (1L << CONST) | (1L << ID) | (1L << INT) | (1L << FLOAT) | (1L << NEWLINE))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
	 
		public StatContext() { }
		public void copyFrom(StatContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CondiContext extends StatContext {
		public ConditionalContext conditional() {
			return getRuleContext(ConditionalContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(LabeledExprParser.NEWLINE, 0); }
		public CondiContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class ForLoopCContext extends StatContext {
		public ForloopContext forloop() {
			return getRuleContext(ForloopContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(LabeledExprParser.NEWLINE, 0); }
		public ForLoopCContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class AssingContext extends StatContext {
		public TerminalNode NEWLINE() { return getToken(LabeledExprParser.NEWLINE, 0); }
		public AsignNumberExprContext asignNumberExpr() {
			return getRuleContext(AsignNumberExprContext.class,0);
		}
		public AsignStringExprContext asignStringExpr() {
			return getRuleContext(AsignStringExprContext.class,0);
		}
		public AssingContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class BlankContext extends StatContext {
		public TerminalNode NEWLINE() { return getToken(LabeledExprParser.NEWLINE, 0); }
		public BlankContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class DeclarConstContext extends StatContext {
		public DeclarationConstContext declarationConst() {
			return getRuleContext(DeclarationConstContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(LabeledExprParser.NEWLINE, 0); }
		public DeclarConstContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class WhileLoopCContext extends StatContext {
		public WhileloopContext whileloop() {
			return getRuleContext(WhileloopContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(LabeledExprParser.NEWLINE, 0); }
		public WhileLoopCContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class DeclarSimpleContext extends StatContext {
		public DeclarationSimpleContext declarationSimple() {
			return getRuleContext(DeclarationSimpleContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(LabeledExprParser.NEWLINE, 0); }
		public DeclarSimpleContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class DeclarContext extends StatContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(LabeledExprParser.NEWLINE, 0); }
		public DeclarContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class PrintlnContext extends StatContext {
		public TerminalNode PRINT() { return getToken(LabeledExprParser.PRINT, 0); }
		public TerminalNode APARE() { return getToken(LabeledExprParser.APARE, 0); }
		public TerminalNode FPARE() { return getToken(LabeledExprParser.FPARE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public StringexprContext stringexpr() {
			return getRuleContext(StringexprContext.class,0);
		}
		public PrintlnContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class ExpContext extends StatContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(LabeledExprParser.NEWLINE, 0); }
		public ExpContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class PrintlnstrContext extends StatContext {
		public TerminalNode PRINTSTR() { return getToken(LabeledExprParser.PRINTSTR, 0); }
		public TerminalNode APARE() { return getToken(LabeledExprParser.APARE, 0); }
		public TerminalNode FPARE() { return getToken(LabeledExprParser.FPARE, 0); }
		public ConcatStringexprContext concatStringexpr() {
			return getRuleContext(ConcatStringexprContext.class,0);
		}
		public StringexprContext stringexpr() {
			return getRuleContext(StringexprContext.class,0);
		}
		public PrintlnstrContext(StatContext ctx) { copyFrom(ctx); }
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat);
		try {
			setState(81);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new WhileLoopCContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(37);
				whileloop();
				setState(38);
				match(NEWLINE);
				}
				break;
			case 2:
				_localctx = new ForLoopCContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(40);
				forloop();
				setState(41);
				match(NEWLINE);
				}
				break;
			case 3:
				_localctx = new CondiContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(43);
				conditional();
				setState(44);
				match(NEWLINE);
				}
				break;
			case 4:
				_localctx = new ExpContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(46);
				expr(0);
				setState(47);
				match(NEWLINE);
				}
				break;
			case 5:
				_localctx = new DeclarContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(49);
				declaration();
				setState(50);
				match(NEWLINE);
				}
				break;
			case 6:
				_localctx = new DeclarSimpleContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(52);
				declarationSimple();
				setState(53);
				match(NEWLINE);
				}
				break;
			case 7:
				_localctx = new DeclarConstContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(55);
				declarationConst();
				setState(56);
				match(NEWLINE);
				}
				break;
			case 8:
				_localctx = new AssingContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(60);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(58);
					asignNumberExpr();
					}
					break;
				case 2:
					{
					setState(59);
					asignStringExpr();
					}
					break;
				}
				setState(62);
				match(NEWLINE);
				}
				break;
			case 9:
				_localctx = new PrintlnContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(64);
				match(PRINT);
				setState(65);
				match(APARE);
				setState(68);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case APARE:
				case ID:
				case INT:
				case FLOAT:
					{
					setState(66);
					expr(0);
					}
					break;
				case STRING:
					{
					setState(67);
					stringexpr();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(70);
				match(FPARE);
				}
				break;
			case 10:
				_localctx = new PrintlnstrContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(72);
				match(PRINTSTR);
				setState(73);
				match(APARE);
				setState(76);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(74);
					concatStringexpr();
					}
					break;
				case 2:
					{
					setState(75);
					stringexpr();
					}
					break;
				}
				setState(78);
				match(FPARE);
				}
				break;
			case 11:
				_localctx = new BlankContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(80);
				match(NEWLINE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	 
		public DeclarationContext() { }
		public void copyFrom(DeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclarationExprContext extends DeclarationContext {
		public List<TerminalNode> TYPES() { return getTokens(LabeledExprParser.TYPES); }
		public TerminalNode TYPES(int i) {
			return getToken(LabeledExprParser.TYPES, i);
		}
		public List<TerminalNode> ID() { return getTokens(LabeledExprParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(LabeledExprParser.ID, i);
		}
		public TerminalNode PTVIG() { return getToken(LabeledExprParser.PTVIG, 0); }
		public List<TerminalNode> VIG() { return getTokens(LabeledExprParser.VIG); }
		public TerminalNode VIG(int i) {
			return getToken(LabeledExprParser.VIG, i);
		}
		public DeclarationExprContext(DeclarationContext ctx) { copyFrom(ctx); }
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration);
		int _la;
		try {
			_localctx = new DeclarationExprContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(TYPES);
			setState(84);
			match(ID);
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VIG) {
				{
				{
				setState(85);
				match(VIG);
				setState(86);
				match(TYPES);
				setState(87);
				match(ID);
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(93);
			match(PTVIG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationSimpleContext extends ParserRuleContext {
		public DeclarationSimpleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationSimple; }
	 
		public DeclarationSimpleContext() { }
		public void copyFrom(DeclarationSimpleContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclarationSimpleExprContext extends DeclarationSimpleContext {
		public TerminalNode TYPES() { return getToken(LabeledExprParser.TYPES, 0); }
		public List<TerminalNode> ID() { return getTokens(LabeledExprParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(LabeledExprParser.ID, i);
		}
		public TerminalNode PTVIG() { return getToken(LabeledExprParser.PTVIG, 0); }
		public List<TerminalNode> VIG() { return getTokens(LabeledExprParser.VIG); }
		public TerminalNode VIG(int i) {
			return getToken(LabeledExprParser.VIG, i);
		}
		public DeclarationSimpleExprContext(DeclarationSimpleContext ctx) { copyFrom(ctx); }
	}

	public final DeclarationSimpleContext declarationSimple() throws RecognitionException {
		DeclarationSimpleContext _localctx = new DeclarationSimpleContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declarationSimple);
		int _la;
		try {
			_localctx = new DeclarationSimpleExprContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(TYPES);
			setState(96);
			match(ID);
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VIG) {
				{
				{
				setState(97);
				match(VIG);
				setState(98);
				match(ID);
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(104);
			match(PTVIG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationConstContext extends ParserRuleContext {
		public DeclarationConstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationConst; }
	 
		public DeclarationConstContext() { }
		public void copyFrom(DeclarationConstContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclarationConstExprContext extends DeclarationConstContext {
		public TerminalNode CONST() { return getToken(LabeledExprParser.CONST, 0); }
		public TerminalNode TYPES() { return getToken(LabeledExprParser.TYPES, 0); }
		public TerminalNode ID() { return getToken(LabeledExprParser.ID, 0); }
		public TerminalNode EQ() { return getToken(LabeledExprParser.EQ, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public StringexprContext stringexpr() {
			return getRuleContext(StringexprContext.class,0);
		}
		public DeclarationConstExprContext(DeclarationConstContext ctx) { copyFrom(ctx); }
	}

	public final DeclarationConstContext declarationConst() throws RecognitionException {
		DeclarationConstContext _localctx = new DeclarationConstContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declarationConst);
		try {
			_localctx = new DeclarationConstExprContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(CONST);
			setState(107);
			match(TYPES);
			setState(108);
			match(ID);
			setState(109);
			match(EQ);
			setState(112);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case APARE:
			case ID:
			case INT:
			case FLOAT:
				{
				setState(110);
				expr(0);
				}
				break;
			case STRING:
				{
				setState(111);
				stringexpr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionalContext extends ParserRuleContext {
		public ConditionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditional; }
	 
		public ConditionalContext() { }
		public void copyFrom(ConditionalContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ConditionalExprContext extends ConditionalContext {
		public TerminalNode IF() { return getToken(LabeledExprParser.IF, 0); }
		public TerminalNode APARE() { return getToken(LabeledExprParser.APARE, 0); }
		public ComparissonContext comparisson() {
			return getRuleContext(ComparissonContext.class,0);
		}
		public TerminalNode FPARE() { return getToken(LabeledExprParser.FPARE, 0); }
		public List<TerminalNode> ABCHAV() { return getTokens(LabeledExprParser.ABCHAV); }
		public TerminalNode ABCHAV(int i) {
			return getToken(LabeledExprParser.ABCHAV, i);
		}
		public List<ConditionalExecExprContext> conditionalExecExpr() {
			return getRuleContexts(ConditionalExecExprContext.class);
		}
		public ConditionalExecExprContext conditionalExecExpr(int i) {
			return getRuleContext(ConditionalExecExprContext.class,i);
		}
		public List<TerminalNode> FECHAV() { return getTokens(LabeledExprParser.FECHAV); }
		public TerminalNode FECHAV(int i) {
			return getToken(LabeledExprParser.FECHAV, i);
		}
		public TerminalNode ELSE() { return getToken(LabeledExprParser.ELSE, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(LabeledExprParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(LabeledExprParser.NEWLINE, i);
		}
		public ConditionalExprContext(ConditionalContext ctx) { copyFrom(ctx); }
	}

	public final ConditionalContext conditional() throws RecognitionException {
		ConditionalContext _localctx = new ConditionalContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_conditional);
		int _la;
		try {
			int _alt;
			_localctx = new ConditionalExprContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(IF);
			setState(115);
			match(APARE);
			setState(116);
			comparisson();
			setState(117);
			match(FPARE);
			setState(118);
			match(ABCHAV);
			setState(119);
			conditionalExecExpr();
			setState(120);
			match(FECHAV);
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(121);
				match(ELSE);
				setState(122);
				match(ABCHAV);
				setState(126);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(123);
						match(NEWLINE);
						}
						} 
					}
					setState(128);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				}
				setState(129);
				conditionalExecExpr();
				setState(130);
				match(FECHAV);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionalExecExprContext extends ParserRuleContext {
		public ConditionalExecExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionalExecExpr; }
	 
		public ConditionalExecExprContext() { }
		public void copyFrom(ConditionalExecExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ConditionalExecContext extends ConditionalExecExprContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public ConditionalExecContext(ConditionalExecExprContext ctx) { copyFrom(ctx); }
	}

	public final ConditionalExecExprContext conditionalExecExpr() throws RecognitionException {
		ConditionalExecExprContext _localctx = new ConditionalExecExprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_conditionalExecExpr);
		int _la;
		try {
			_localctx = new ConditionalExecContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(135); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(134);
				stat();
				}
				}
				setState(137); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << PRINT) | (1L << PRINTSTR) | (1L << APARE) | (1L << TYPES) | (1L << CONST) | (1L << ID) | (1L << INT) | (1L << FLOAT) | (1L << NEWLINE))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileloopContext extends ParserRuleContext {
		public WhileloopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileloop; }
	 
		public WhileloopContext() { }
		public void copyFrom(WhileloopContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class WhileLoopExprContext extends WhileloopContext {
		public TerminalNode WHILE() { return getToken(LabeledExprParser.WHILE, 0); }
		public TerminalNode APARE() { return getToken(LabeledExprParser.APARE, 0); }
		public ComparissonContext comparisson() {
			return getRuleContext(ComparissonContext.class,0);
		}
		public TerminalNode FPARE() { return getToken(LabeledExprParser.FPARE, 0); }
		public TerminalNode ABCHAV() { return getToken(LabeledExprParser.ABCHAV, 0); }
		public TerminalNode FECHAV() { return getToken(LabeledExprParser.FECHAV, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public WhileLoopExprContext(WhileloopContext ctx) { copyFrom(ctx); }
	}

	public final WhileloopContext whileloop() throws RecognitionException {
		WhileloopContext _localctx = new WhileloopContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_whileloop);
		int _la;
		try {
			_localctx = new WhileLoopExprContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(WHILE);
			setState(140);
			match(APARE);
			setState(141);
			comparisson();
			setState(142);
			match(FPARE);
			setState(143);
			match(ABCHAV);
			setState(145); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(144);
				stat();
				}
				}
				setState(147); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << PRINT) | (1L << PRINTSTR) | (1L << APARE) | (1L << TYPES) | (1L << CONST) | (1L << ID) | (1L << INT) | (1L << FLOAT) | (1L << NEWLINE))) != 0) );
			setState(149);
			match(FECHAV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForloopContext extends ParserRuleContext {
		public ForloopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forloop; }
	 
		public ForloopContext() { }
		public void copyFrom(ForloopContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ForLoopExprContext extends ForloopContext {
		public TerminalNode FOR() { return getToken(LabeledExprParser.FOR, 0); }
		public TerminalNode APARE() { return getToken(LabeledExprParser.APARE, 0); }
		public AsignNumberExprContext asignNumberExpr() {
			return getRuleContext(AsignNumberExprContext.class,0);
		}
		public TerminalNode PTVIG() { return getToken(LabeledExprParser.PTVIG, 0); }
		public ComparissonContext comparisson() {
			return getRuleContext(ComparissonContext.class,0);
		}
		public TerminalNode FPARE() { return getToken(LabeledExprParser.FPARE, 0); }
		public TerminalNode ABCHAV() { return getToken(LabeledExprParser.ABCHAV, 0); }
		public TerminalNode FECHAV() { return getToken(LabeledExprParser.FECHAV, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public ForLoopExprContext(ForloopContext ctx) { copyFrom(ctx); }
	}

	public final ForloopContext forloop() throws RecognitionException {
		ForloopContext _localctx = new ForloopContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_forloop);
		int _la;
		try {
			_localctx = new ForLoopExprContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(FOR);
			setState(152);
			match(APARE);
			setState(153);
			asignNumberExpr();
			setState(154);
			match(PTVIG);
			setState(155);
			comparisson();
			setState(156);
			match(FPARE);
			setState(157);
			match(ABCHAV);
			setState(159); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(158);
				stat();
				}
				}
				setState(161); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << PRINT) | (1L << PRINTSTR) | (1L << APARE) | (1L << TYPES) | (1L << CONST) | (1L << ID) | (1L << INT) | (1L << FLOAT) | (1L << NEWLINE))) != 0) );
			setState(163);
			match(FECHAV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignNumberExprContext extends ParserRuleContext {
		public AsignNumberExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignNumberExpr; }
	 
		public AsignNumberExprContext() { }
		public void copyFrom(AsignNumberExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AssingNumberContext extends AsignNumberExprContext {
		public TerminalNode ID() { return getToken(LabeledExprParser.ID, 0); }
		public TerminalNode EQ() { return getToken(LabeledExprParser.EQ, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssingNumberContext(AsignNumberExprContext ctx) { copyFrom(ctx); }
	}
